# BakeArr

./: pyproject.toml
app/: main.py
app/core/: config.py
app/models/: base.py  user.py
app/v1/: health.py
backend/app/core/: auth.py  database.py
backend/app/schemas/: auth.py
